added demo gif, added links to webpage

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 
 <body>
 	<div class="content">
-		<h1 class="header">Greek Characters used in Mathematics Recognition using Convolutional Neural Networks</h1>
+		<h1 class="header">Greek Characters used in Mathematics Recognition using <a target="_blank" href="https://github.com/mrudulpatil18/greekGlyphScribe/blob/main/Classification.ipynb">Convolutional Neural Networks  </a></h1>
 
 		<div class="main">
 		<div class="input">
