--- a/static/style.css
+++ b/static/style.css
@@ -11,6 +11,16 @@
 	width: 100%;
 }
 
+ a {
+      text-decoration: none;
+      color: inherit;
+ }
+
+ a:hover, a:focus, a:active {
+    color:black;
+ }
+
+
 *{
     margin: 0;
 	font-family: 'Open Sans', Helvetica;
