--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,7 @@
 
 @import url('http://fonts.googleapis.com/css?family=Open+Sans:400,300');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Brush+Script&display=swap');
+
 
 .content {
 	height: 100vh;
@@ -68,6 +70,12 @@ h1 {
 	gap: 10px;
 }
 
+.result h4{
+	font-weight: 500;
+	color: rgb(40, 187, 26);
+	font-size: 50px;
+	font-family: 'Nanum Brush Script', cursive;
+}
 
 
 .result{
